# PackageKit

./: configure.ac
backends/: Makefile.am
backends/pkg/: Makefile.am  pk-backend-pkg.c
